# pyloans

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_environment.py
.github/workflows/: ci.yml  docs.yml  test.yml
docs/: index.md  loan.md  quickstart.md
loan/: index.html
notebooks/: dev_notebook.ipynb
quickstart/: index.html
search/: search_index.json
src/: Loan.py  dev_notebook.ipynb
src/pyloans/: Loan.py
src/tests/: test_Loan.py
tests/: test_Loan.py  test_pyloans_examples.xlsx
