[tool.poetry]
name = "pyloans"
version = "0.1.0"
description = "A package to generate, analyze and work with simple installment loans."
authors = ["Sandeep <sandeep.kavadi.uc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy-financial = "^1.0.0"
pandas = "^1.5.2"
jupyter = "^1.0.0"
arrow = "^1.2.3"
hydra-core = "^1.3.1"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
pre-commit = "^2.20.0"
mkdocs-material = "^8.5.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
